k8s/monitoring-fix.yaml
apiVersion: v1
kind: Service
metadata:
  name: doctrine-demo-svc
  namespace: default
  labels:
    app: doctrine-demo
spec:
  selector:
    app: doctrine-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080 # ← ton container expose 8080
      protocol: TCP
